--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p class="launch-date">Launching on <strong>31st August 2025</strong></p>
 
         <div class="team">
-            <p><strong>MD:</strong> Anand Shukla</p>
+            <p><strong>Managing Director:</strong> Anand Shukla</p>
             <p><strong>Co-Founder:</strong> Govind Mishra</p>
             <p><strong>General Manager:</strong> Gaurav Shukla</p>
         </div>
