added some more roles

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
             
             <div class="team-member">
                 <h3>Govind Mishra</h3>
-                <div class="role">Co-Founder</div>
+                <div class="role">Co-Founder & Consultant</div>
                 <p>Innovation expert and technical mastermind behind our product development. Govind leads our R&D initiatives and manufacturing process optimization.</p>
             </div>
             
